--- a/frontend/styles/LayoutSignUp.module.css
+++ b/frontend/styles/LayoutSignUp.module.css
@@ -16,7 +16,7 @@
 .cardLogin {
     margin: 0 auto;
     position: fixed;
-    width:450px;
+    width: 450px;
     height: auto;
     left: 5rem;
     top: 134px;
@@ -31,15 +31,15 @@
 }
 
 .cardInCardLogin {
-    position:fixed;
+    position: fixed;
     width: 450px;
-    height: auto;
+    height: 418px;
     right: 5rem;
-    top:134px;
+    top: 134px;
     background: rgba(255, 255, 255, 0.34);
     backdrop-filter: blur(2px);
     border-radius: 28px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .textTitlaInCardLogin {
@@ -58,7 +58,7 @@
 
 .textTitlaInCardLogin1 {
     padding-left: 45px;
-    padding-top: 45px;
+    padding-top: 135px;
     padding-right: 45px;
     font-family: 'Poppins';
     font-weight: 900;
@@ -116,7 +116,7 @@
 }
 
 .bgImg {
-    background: url('/assets/bg-login.png') no-repeat;
+    background: url('/assets/bg-register.png') no-repeat;
     position: fixed;
     left: 900px;
     top: 0px;
