Fixing display login & register

--- a/frontend/styles/LayoutSignIn.module.css
+++ b/frontend/styles/LayoutSignIn.module.css
@@ -141,3 +141,9 @@
     flex-grow: 0;
     transform: translate(-50%, -50%) scaleX(-1.4);
 }
+
+@media (max-width: 1200px) {
+    .cardInCardLogin {
+        display: none;
+    }
+}
