--- a/frontend/styles/LayoutSignIn.module.css
+++ b/frontend/styles/LayoutSignIn.module.css
@@ -42,12 +42,6 @@
     overflow:hidden;
 }
 
-@media (max-width: 1200px) {
-    .cardInCardLogin {
-        display: none;
-    }
-}
-
 .textTitlaInCardLogin {
     padding-left: 45px;
     padding-top: 45px;
@@ -121,20 +115,8 @@
     flex-grow: 0;
 }
 
-/* .bgImg {
-    background: url('/assets/bg-login.png') no-repeat;
-    position: fixed;
-    left: 900px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    background-size: contain;
-    transform: scaleX(1.4);
-    z-index: 0;
-} */
-
 .bgImg {
-    background: url('/assets/bg-login.png') no-repeat right fixed;
+    background: url('/assets/bg-login.png') no-repeat right center fixed;
     -webkit-background-size: contain;
     -moz-background-size: contain;
     -o-background-size: contain;
@@ -144,7 +126,7 @@
     position: fixed;
     transform: scaleX(1.5);
     top: 0;
-    right: 230px;
+    right: 15rem;
     z-index: -1;
 }
 
@@ -161,4 +143,14 @@
     order: 0;
     flex-grow: 0;
     transform: translate(-50%, -50%) scaleX(-1.4);
+}
+
+@media (max-width: 1100px) {
+    .cardInCardLogin {
+        display: none;
+    }
+
+    .bgImg {
+        display: none;
+    }
 }
