--- a/frontend/styles/LayoutSignUp.module.css
+++ b/frontend/styles/LayoutSignUp.module.css
@@ -33,7 +33,7 @@
 .cardInCardLogin {
     position:fixed;
     width: 450px;
-    height: 418px;
+    height: 430px;
     right: 5rem;
     top:134px;
     background: rgba(255, 255, 255, 0.34);
@@ -72,7 +72,7 @@
 
 .textTitlaInCardLogin2 {
     padding-left: 45px;
-    padding-top: 20px;
+    padding-top: 25px;
     padding-right: 45px;
     font-family: 'Poppins';
     font-weight: 900;
@@ -86,7 +86,7 @@
 
 .textTitlaInCardLogin3 {
     padding-left: 45px;
-    padding-top: 20px;
+    padding-top: 25px;
     padding-right: 45px;
     font-family: 'Poppins';
     font-weight: 900;
@@ -99,7 +99,7 @@
 }
 
 .textSubtitleInCardLogin {
-    margin-top: 20px;
+    margin-top: 30px;
     padding-left: 45px;
     margin-bottom: 45px;
     padding-right: 50px;
@@ -116,15 +116,18 @@
 }
 
 .bgImg {
-    background: url('/assets/bg-register.png') no-repeat;
-    position: fixed;
-    left: 900px;
-    top: 0px;
+    background: url('/assets/bg-register.png') no-repeat right center fixed;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    -o-background-size: contain;
+    background-size: contain;
     width: 100%;
     height: 100%;
-    background-size: contain;
-    transform: scaleX(1.4);
-    z-index: 0;
+    position: fixed;
+    transform: scaleX(1.5);
+    top: 0;
+    right: 15rem;
+    z-index: -1;
 }
 
 .textTitleInCardFormLogin {
@@ -142,8 +145,12 @@
     transform: translate(-50%, -50%) scaleX(-1.4);
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1100px) {
     .cardInCardLogin {
+        display: none;
+    }
+
+    .bgImg {
         display: none;
     }
 }
