--- a/fronted-nextjs/realta-hotel/styles/LayoutSignIn.module.css
+++ b/fronted-nextjs/realta-hotel/styles/LayoutSignIn.module.css
@@ -116,7 +116,7 @@
 }
 
 .bgImg {
-    background: url('/assets/bg-login.png') no-repeat right center fixed;
+    background: url('/assets/bg-login-full.png') no-repeat center fixed;
     -webkit-background-size: contain;
     -moz-background-size: contain;
     -o-background-size: contain;
@@ -124,9 +124,9 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    transform: scaleX(1.5);
+    transform: scaleX(1.15);
     top: 0;
-    right: 15rem;
+    left: 0;
     z-index: -1;
 }
 
